# wasm-uniswapV2-core

./: package.json  swanky.config.json
artifacts/core/: core.contract
artifacts/pair/: pair.json
artifacts/psp22token/: psp22token.contract  psp22token.json
contracts/core/: Cargo.toml
contracts/core/src/: lib.rs
contracts/pair/: Cargo.toml
contracts/pair/src/: lib.rs
contracts/psp22token/: Cargo.toml
contracts/psp22token/src/: lib.rs
tests/core/artifacts/: core.json
tests/pair/: index.test.ts
tests/pair/artifacts/: pair.contract
tests/psp22token/: index.test.ts
tests/uniswap-core/: index.test.ts
